--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   },
   "scripts": {
     "build": "webpack",
-    "dev": "webpack serve --open"
+    "dev": "webpack serve --open",
+    "test": "vitest"
   },
   "repository": {
     "type": "git",
@@ -15,19 +16,24 @@
   },
   "author": "Tommy Svensson <github.com/krokben>",
   "devDependencies": {
+    "@testing-library/react": "^13.3.0",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@typescript-eslint/eslint-plugin": "^5.35.1",
     "@typescript-eslint/parser": "^5.35.1",
+    "@vitejs/plugin-react": "^2.0.1",
     "css-loader": "^6.7.1",
     "css-minimizer-webpack-plugin": "^4.0.0",
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.1",
     "html-webpack-plugin": "^5.5.0",
+    "isomorphic-fetch": "^3.0.0",
+    "jsdom": "^20.0.0",
     "mini-css-extract-plugin": "^2.6.1",
     "prettier": "^2.7.1",
     "ts-loader": "^9.3.1",
     "typescript": "^4.8.2",
+    "vitest": "^0.22.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.10.0"
