--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "vitest": "^0.22.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.10.0"
+    "webpack-dev-server": "^4.10.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
     "classnames": "^2.3.1",
