--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "eslint": "^8.23.0",
     "eslint-plugin-react": "^7.31.1",
     "html-webpack-plugin": "^5.5.0",
+    "intersection-observer": "^0.12.2",
     "isomorphic-fetch": "^3.0.0",
     "jsdom": "^20.0.0",
     "mini-css-extract-plugin": "^2.6.1",
